--- a/assets/themes/the-minimum/css/style.less
+++ b/assets/themes/the-minimum/css/style.less
@@ -286,6 +286,7 @@ pre {
 /* FOOTER
 ----------------------------------------------- */
 .the-footer {
+    display: none;
 	background-color: #1a1a1a;
 	background-color: rgba(21, 25, 25, 0.8);
 	color: #fafafa;
