--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -22,9 +22,9 @@
 							</date>
 						</p>
 						<ul class="list-tag list-linear">
-							<li class="list-head">Tags: </li><span>
+							<li class="list-head">Tags: </li>
 							{% assign tags_list = page.tags %}
-							{% include JB/tags_list %}</span>
+							{% include JB/tags_list %}
 						</ul>
 					</div><!-- meta -->
 				</div><!-- entry-content -->
