--- a/_includes/themes/the-minimum/post.html
+++ b/_includes/themes/the-minimum/post.html
@@ -22,7 +22,7 @@
 							</date>
 						</p>
 						<ul class="list-tag list-linear">
-							<li class="list-head">Tags: </li>
+							<li class="list-head">Tags: &nbsp; </li>
 							{% assign tags_list = page.tags %}
 							{% include JB/tags_list %}
 						</ul>
